# CLAP-Special-Topic-DBMS

./: .gitignore  LICENSE  Makefile  README.md  metrics_analysis.py  pyproject.toml  repro_utils.py  requirements.txt
docs/: phase_0_to_4_status.md  phase_5_to_12_status.md  reproduction_workflow.md  wsl_reproduction_setup.md
envs/: clap_official.yml  clap_reimpl.yml
reports/: CLAP_Final_Report.md  CLAP_Final_Report.tex
reports/assets/manifests/: acceptance_check_full.json  checkpoint_630k-audioset-best.json  full_baseline.json  full_extensions.json  full_extensions_ensemble.json  gtzan_preparation.json
reports/assets/tables/: ensemble_summary.csv  zeroshot_summary.csv
scripts/: __init__.py
scripts/analysis/: __init__.py  run_ensemble_prompting.py  run_zeroshot_metrics.py
scripts/repro/: check_acceptance.py  run_extensions.sh  run_reproduction.sh  verify_assets.py
scripts/setup/: bootstrap_phase_0_to_4.sh  clone_official_repo.sh  fetch_checkpoint.sh  link_shared_assets.sh  prepare_wsl_workspace.sh  setup_official_env.sh  setup_reimpl_env.sh
